# chess-llm-core

./: .gitignore  README.md  pyproject.toml  setup.py
chess_llm/: __init__.py
chess_llm/config/: __init__.py  models.py  settings.py
chess_llm/prompts/: __init__.py  base.py
chess_llm/prompts/coaching/: __init__.py  mentor_insights.py  opening_analysis.py
chess_llm/prompts/extraction/: __init__.py  key_areas.py
chess_llm/prompts/scouting/: __init__.py  battle_plan.py
chess_llm/providers/: __init__.py  anthropic.py  base.py  registry.py
chess_llm/tracking/: __init__.py  usage.py
tests/: __init__.py  test_config.py  test_prompts.py  test_providers.py  test_tracking.py
